--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@
 .Spotlight-V100
 .Trashes
 # Icon must end with two \r
-Icon
-
+Icon
 ehthumbs.db
 Thumbs.db
 .directory
@@ -23,7 +22,7 @@ Thumbs.db
 # Tool specific files #
 #######################
 # PHPUnit
-.phpunit.result.cache
+.phpunit.cache
 tests.sqlite
 # vim
 *~
