--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,18 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
-        "cakephp/authentication": "^2.10",
-        "cakephp/cakephp": "4.4.*",
-        "cakephp/migrations": "^3.2",
+        "php": ">=8.1",
+        "cakephp/cakephp": "^5.0.0",
+        "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
         "mobiledetect/mobiledetectlib": "^3.74"
     },
     "require-dev": {
-        "cakephp/bake": "^2.6",
-        "cakephp/cakephp-codesniffer": "^5.1",
-        "cakephp/debug_kit": "^4.5",
+        "cakephp/bake": "^3.0.0",
+        "cakephp/cakephp-codesniffer": "^5.0",
+        "cakephp/debug_kit": "^5.0.0",
         "josegonzalez/dotenv": "^4.0",
-        "phpunit/phpunit": "^10.3.4"
+        "phpunit/phpunit": "^10.1.0"
     },
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
@@ -43,13 +42,14 @@
             "@test",
             "@cs-check"
         ],
-        "cs-check": "phpcs --colors -p  src/ tests/",
-        "cs-fix": "phpcbf --colors -p src/ tests/",
+        "cs-check": "phpcs --colors -p",
+        "cs-fix": "phpcbf --colors -p",
         "stan": "phpstan analyse",
         "test": "phpunit --colors=always"
     },
     "prefer-stable": true,
     "config": {
+        "platform-check": true,
         "sort-packages": true,
         "allow-plugins": {
             "cakephp/plugin-installer": true,
